--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,6 @@
 		<link rel="icon" href="%PUBLIC_URL%/assets/images/e&e_favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
 
 		<link rel="stylesheet" href="%PUBLIC_URL%/styles/css/index.css" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -19,7 +15,7 @@
 			referrerpolicy="no-referrer"
 		></script>
 
-		<title>React App</title>
+		<title>The Eyes & Ears Agency</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
