--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,27 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Raleway:wght@300;400;500;600;700&display=swap"
 			rel="stylesheet"
 		/>
+		<!-- jQuery CDN -->
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
 			integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-X4BZ5BFXZ4"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
 
+			gtag("config", "G-X4BZ5BFXZ4");
+		</script>
 		<title>The Eyes & Ears Agency</title>
 	</head>
 	<body>
