Only apply hover frame effect on hover

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,13 @@
 			rel="stylesheet"
 		/>
 
-		<!-- jQuery CDN -->
+		<!-- scripts -->
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+			integrity="sha512-3n19xznO0ubPpSwYCRRBgHh63DrV+bdZfHK52b1esvId4GsfwStQNPJFjeQos2h3JwCmZl0/LgLxSKMAI55hgw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 		<script
 			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
 			integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
@@ -35,7 +41,7 @@
 
 			gtag("config", "G-X4BZ5BFXZ4");
 		</script>
-    
+
 		<title>The Eyes & Ears Agency</title>
 	</head>
 	<body>
